prod/server/server-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: wavesmp
  name: waves-server-rust-prod
  labels:
    app.kubernetes.io/instance: waves-server-rust-prod
    app.kubernetes.io/version: aedcb22769ebfa304c3af9918f424f91531d4ac9
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: waves-server-rust-prod-canary-service # our created canary service
      stableService: waves-server-rust-prod-stable-service # our created stable service
      dynamicStableScale: true # dynamically scale down the old versions
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: waves-server-rust-http # our created httproute
            namespace: wavesmp
      steps:
      # 0) Set canary scale to 50% of spec.replicas without changing traffic weight
      # (supported only with trafficRouting)
      - setCanaryScale:
          weight: 50
      # 1) Run integration test on the canary service
      - analysis:
          templates:
          - templateName: server-integration-test
          args:
          - name: service-name
            value: waves-server-rust-prod-canary-service
      # 2) Pause 1m after integation test
      - pause:
          duration: 1m
      # 3) Sets the ratio of canary ReplicaSet to 50%
      - setWeight: 50
      # 4) Set canary scale to match the canary traffic weight (default behavior)
      - setCanaryScale:
          matchTrafficWeight: true
      # 5) Pause for 1 minute while half rollouts completes
      - pause:
          duration: 1m
      # 6) Increase the ratio of canary ReplicaSet to 100%
      - setWeight: 100
      # 7) Pause for 1m after full scale up
      - pause:
          duration: 1m
  revisionHistoryLimit: 2
  rollbackWindow:
    revisions: 2
  selector:
    matchLabels:
      app: waves-server-rust-prod
  template:
    metadata:
      labels:
        app: waves-server-rust-prod
    spec:
      containers:
      - image: ghcr.io/wavesmp/wavesmp/server:aedcb22769ebfa304c3af9918f424f91531d4ac9
        name: waves-server-rust
        ports:
        - containerPort: 16244
          name: ws
        - containerPort: 16245
          name: http
        volumeMounts:
        - name: config
          mountPath: /src/config
      volumes:
      - name: config
        secret:
          secretName: waves-server-rust-prod
