prod/server/service-waves-server-rust.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wavesmp
  name: waves-server-rust
spec:
  ports:
  - port: 16244
    name: ws
  - port: 16245
    name: http
  selector:
    app: waves-server-rust-prod
  type: ClusterIP
